Updated NetisHR files

--- a/netishr/performance_kpi_new.html
+++ b/netishr/performance_kpi_new.html
@@ -482,6 +482,17 @@
                                             <option value="Internal Process">Internal Process</option>
                                         </select>
                                     </div>
+                                    <p></p>
+                                    <label class="font-noraml">Objective:</label>
+                                    <div>
+                                        <select data-placeholder="Choose an objective..." class="chosen-select" tabindex="2">
+                                            <option value="">None</option>
+                                            <option value="Improve profitability">Finance</option>
+                                            <option value="Improve cost efficiency">Customer</option>
+                                            <option value="Increase customer acquisition">Internal Process</option>
+                                        </select>
+                                    </div>
+
                                     <div class="hr-line-dashed"></div>
 
                                     <p></p>
