--- a/netishr/persons_profile.html
+++ b/netishr/persons_profile.html
@@ -453,14 +453,13 @@
 
                     <div class="col-lg-3">
 
-                        <div class="ibox">
+                        <div class="ibox float-e-margins">
                             <div class="ibox-content">
-
                                 <ul class="nav nav-tabs">
                                     <span class="pull-right small text-muted">Active</span>
                                     <li class="active"><a data-toggle="tab" href="#tab-1"><i class="fa fa-user"></i> Basic Info</a></li>
-                                    <li class=""><a data-toggle="tab" href="#tab-2"><i class="fa fa-briefcase"></i> Additional info</a></li>
-                                    <li class=""><a data-toggle="tab" href="#tab-3"><i class="fa fa-briefcase"></i> Employment History info</a></li>
+                                    <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-briefcase"></i> Additional info</a></li>
+                                    <li><a data-toggle="tab" href="#tab-3"><i class="fa fa-briefcase"></i> Employment History info</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div id="tab-1" class="tab-pane active">
@@ -537,7 +536,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="ibox float-e-margins">
                             <div class="ibox-title">
                                 <h5>More info (customizeable)</h5>
