--- a/netishr/forgot_password.html
+++ b/netishr/forgot_password.html
@@ -49,10 +49,10 @@
         <hr/>
         <div class="row">
             <div class="col-md-6">
-                Copyright Example Company
+                Copyright Netika Indonesia
             </div>
             <div class="col-md-6 text-right">
-               <small>© 2014-2015</small>
+                <small>© 2016</small>
             </div>
         </div>
     </div>
