--- a/netishr/performance_kpi_view.html
+++ b/netishr/performance_kpi_view.html
@@ -433,10 +433,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="ibox-tools">
-                        <a href="performance_kpi_new.html" class="btn btn-primary btn-xs">New KPI</a>
-                    </div>
-                </div>
+<div class="ibox-tools">
+    <a href="performance_kpi_new.html" class="btn btn-primary btn-xs">New KPI</a>
+</div>                </div>
 
                 <div class="row">
                     <div class="col-lg-12">
