--- a/netishr/performance_kpi_view.html
+++ b/netishr/performance_kpi_view.html
@@ -407,12 +407,6 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="form-group">
-                                <label class="control-label" for="price">Perspective</label>
-                                <input type="text" id="price" name="price" value="" placeholder="Perspective" class="form-control">
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="form-group">
                                 <label class="control-label" for="quantity">Action Plan</label>
                                 <input type="text" id="quantity" name="quantity" value="" placeholder="Action Plan" class="form-control">
                             </div>
@@ -432,10 +426,40 @@
                                 </select>
                             </div>
                         </div>
+
                     </div>
-<div class="ibox-tools">
-    <a href="performance_kpi_new.html" class="btn btn-primary btn-xs">New KPI</a>
-</div>                </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <label class="control-label">Parent Job Title</label>
+                                <select data-placeholder="Choose parent job title..." class="chosen-select">
+                                    <option value="1">Select a KPI</option>
+                                    <option value="2">Lorem ipsum dolor</option>
+                                    <option value="3">Sit amet consectetur</option>
+                                    <option value="4">Adipiscing elit</option>
+                                    <option value="5">Etiam tristique</option>
+                                    <option value="6">Orci quis convallis pretium</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <!-- load KPIs of the job title selected above -->
+                                <label class="control-label">Parent KPI</label>
+                                <select data-placeholder="Choose a parent KPI..." class="chosen-select">
+                                    <option value="1">Select a KPI</option>
+                                    <option value="2">Lorem ipsum dolor</option>
+                                    <option value="3">Sit amet consectetur</option>
+                                    <option value="4">Adipiscing elit</option>
+                                    <option value="5">Etiam tristique</option>
+                                    <option value="6">Orci quis convallis pretium</option>
+                                </select>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
 
                 <div class="row">
                     <div class="col-lg-12">
@@ -447,7 +471,6 @@
                                         <tr>
 
                                             <th data-toggle="true">Code</th>
-                                            <th data-toggle="true">Perspective</th>
                                             <th data-toggle="true">Action Plan</th>
                                             <th>KPI</th>
                                             <th data-hide="phone,tablet">Target</th>
@@ -455,6 +478,9 @@
                                             <th data-hide="phone,tablet">Formula</th>
                                             <th data-hide="phone">Status</th>
                                             <th class="text-right" data-sort-ignore="true">
+                                                <div class="ibox-tools">
+                                                    <a href="performance_kpi_new.html" class="btn btn-primary btn-xs">New KPI</a>
+                                                </div>
                                             </th>
 
                                         </tr>
@@ -463,9 +489,6 @@
                                         <tr>
                                             <td>
                                                 1.1.2.1
-                                            </td>
-                                            <td>
-                                                Finance
                                             </td>
                                             <td>
                                                 Sed imperdiet est in luctus efficitur.
@@ -497,9 +520,6 @@
                                                 1.1.2.2
                                             </td>
                                             <td>
-                                                Finance
-                                            </td>
-                                            <td>
                                                 Donec viverra commodo mauris sed suscipit.
                                             </td>
                                             <td>
@@ -529,9 +549,6 @@
                                                 1.1.2.3
                                             </td>
                                             <td>
-                                                Customer
-                                            </td>
-                                            <td>
                                                 Sociis natoque penatibus.
                                             </td>
                                             <td>
@@ -559,9 +576,6 @@
                                         <tr>
                                             <td>
                                                 1.1.2.4
-                                            </td>
-                                            <td>
-                                                Internal process
                                             </td>
                                             <td>
                                                 Donec viverra commodo.
