Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -250,6 +250,9 @@
                             </li>
                         </ul>
                     </li>
+                    <li>
+                        <a href="settings.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
+                    </li>
 
 
                 </ul>
