Updated NetisHR v2 files (mainly menu)

--- a/netishr/job_clans.html
+++ b/netishr/job_clans.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -29,21 +29,17 @@
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
-                        <div class="dropdown profile-element">
-                            <span>
-                                <img alt="image" class="img-circle" src="img/profile_small.jpg" />
-                            </span>
+                        <div class="dropdown profile-element"> <span>
+                            <img alt="image" class="img-circle" src="img/profile_small.jpg" />
+                             </span>
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                                <span class="clear">
-                                    <span class="block m-t-xs">
-                                        <strong class="font-bold">Arnold Siboro</strong>
-                                    </span> <span class="text-muted text-xs block">HR Admin <b class="caret"></b></span>
-                                </span>
+                                <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">Arnold Siboro</strong>
+                             </span> <span class="text-muted text-xs block">HR Admin <b class="caret"></b></span> </span>
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="">Account</a></li>
-                                <li><a href="">Settings</a></li>
+                                <li><a href="account.html">Account</a></li>
+                                <li><a href="settings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -59,8 +55,7 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li>
-                                <a href="#">Level<span class="fa arrow"></span></a>
+                            <li><a href="#">Level<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="#">Branches</a>
@@ -70,8 +65,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">Structure<span class="fa arrow"></span></a>
+                            <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="job_levels.html">Job Levels/Sub-levels</a>
@@ -93,8 +87,7 @@
                     <li>
                         <a href="#"><i class="fa fa-bar-chart-o"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li>
-                                <a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
+                            <li><a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="competency_dictionary.html">Competency Dictionary</a>
@@ -127,11 +120,10 @@
                     <li>
                         <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li>
-                                <a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
+                            <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="performance_kpi_new.html">Corporate Perspective/Objetives</a>
+                                        <a href="perspective.html">Corporate Perspective/Objetives</a>
                                     </li>
                                     <li>
                                         <a href="performance_kpi_view.html">Assign and view KPIs</a>
@@ -139,8 +131,7 @@
                                 </ul>
                             </li>
 
-                            <li>
-                                <a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
+                            <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="#">Result Targets (KPI)</a>
@@ -152,8 +143,7 @@
                             </li>
                             <li><a href="#">Coaching</a></li>
                             <li><a href="#">Evidence</a></li>
-                            <li>
-                                <a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
+                            <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
@@ -253,7 +243,13 @@
                             </li>
                         </ul>
                     </li>
+                    <li>
+                        <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
+                    </li>
+
+
                 </ul>
+
             </div>
         </nav>
 
