--- a/netishr/settings.html
+++ b/netishr/settings.html
@@ -417,10 +417,7 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        Corporate Calendar
-                                        <br> Performance Evaluation Period
-                                        <br>Users Management
-
+                                        --
                                     </div>
                                 </div>
                                 <div class="ibox float-e-margins">
@@ -431,7 +428,7 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        Upload Job Titles
+                                        --
                                     </div>
                                 </div>
                                 <div class="ibox float-e-margins">
@@ -442,6 +439,7 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
+                                        --
                                     </div>
                                 </div>
                             </div>
@@ -454,7 +452,7 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        Upload Persons
+                                        --
                                     </div>
                                 </div>
                                 <div class="ibox float-e-margins">
@@ -465,7 +463,7 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        Upload Applicants
+                                        --
                                     </div>
                                 </div>
                                 <div class="ibox float-e-margins">
@@ -476,6 +474,20 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
+
+
+                                        <div class="form-group">
+
+                                            <label class="font-noraml">Performance Management Period</label>
+                                            <div>
+                                                <select data-placeholder="Choose a period..." class="chosen-select" tabindex="2">
+                                                    <option value="January 2016-December 2016">January 2016-December 2016</option>
+                                                    <option selected value="January 2015-December 2015">January 2015-December 2015</option>
+                                                    <option value="January 2014-December 2014">January 2014-December 2014</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -490,9 +502,7 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        Category
-                                        <br> Institution
-                                        <br> Instructor
+                                        --
                                     </div>
                                 </div>
                                 <div class="ibox float-e-margins">
@@ -503,7 +513,7 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        Policy Setting
+                                        --
                                     </div>
                                     <div class="ibox float-e-margins">
                                         <div class="ibox-title">
@@ -513,8 +523,7 @@
                                             </div>
                                         </div>
                                         <div class="ibox-content">
-                                            Personnel Administration
-                                            <br> Payroll
+                                            --
                                         </div>
 
                                     </div>
