--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -45,8 +45,8 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="">Account</a></li>
-                                <li><a href="">Settings</a></li>
+                                <li><a href="account.html">Account</a></li>
+                                <li><a href="settings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -250,6 +250,9 @@
                             </li>
                         </ul>
                     </li>
+                    <li>
+                        <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
+                    </li>
 
 
                 </ul>
@@ -417,9 +420,17 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        Corporate Calendar
-                                        <br> Performance Evaluation Period
-                                        <br>Users Management
+                                        <div><a href="corporate_calendar.html">Corporate Annual Calendar</a>
+                                            <div class="small">Calendar of corporate events</div>
+                                        </div>
+                                        <p></p>
+                                        <div>Performance Evaluation Periods
+                                            <div class="small">Calendar of corporate events</div>
+                                        </div>
+                                        <p></p>
+                                        <div>Users Management
+                                            <div class="small">Calendar of corporate events</div>
+                                        </div>
 
                                     </div>
                                 </div>
@@ -427,7 +438,7 @@
                                     <div class="ibox-title">
                                         <h5>Organisation</h5>
                                         <div class="ibox-tools">
-                                            <span class="label label-warning-light pull-right">10 Messages</span>
+                                            <!--<span class="label label-warning-light pull-right">10 Messages</span>-->
                                         </div>
                                     </div>
                                     <div class="ibox-content">
@@ -438,7 +449,6 @@
                                     <div class="ibox-title">
                                         <h5>Job</h5>
                                         <div class="ibox-tools">
-                                            <span class="label label-warning-light pull-right">10 Messages</span>
                                         </div>
                                     </div>
                                     <div class="ibox-content">
@@ -450,7 +460,6 @@
                                     <div class="ibox-title">
                                         <h5>Person</h5>
                                         <div class="ibox-tools">
-                                            <span class="label label-warning-light pull-right">10 Messages</span>
                                         </div>
                                     </div>
                                     <div class="ibox-content">
@@ -461,7 +470,6 @@
                                     <div class="ibox-title">
                                         <h5>Recruitment</h5>
                                         <div class="ibox-tools">
-                                            <span class="label label-warning-light pull-right">10 Messages</span>
                                         </div>
                                     </div>
                                     <div class="ibox-content">
@@ -472,7 +480,6 @@
                                     <div class="ibox-title">
                                         <h5>Performance</h5>
                                         <div class="ibox-tools">
-                                            <span class="label label-warning-light pull-right">10 Messages</span>
                                         </div>
                                     </div>
                                     <div class="ibox-content">
@@ -486,7 +493,6 @@
                                     <div class="ibox-title">
                                         <h5>Training</h5>
                                         <div class="ibox-tools">
-                                            <span class="label label-warning-light pull-right">10 Messages</span>
                                         </div>
                                     </div>
                                     <div class="ibox-content">
@@ -499,7 +505,6 @@
                                     <div class="ibox-title">
                                         <h5>Career</h5>
                                         <div class="ibox-tools">
-                                            <span class="label label-warning-light pull-right">10 Messages</span>
                                         </div>
                                     </div>
                                     <div class="ibox-content">
@@ -509,7 +514,6 @@
                                         <div class="ibox-title">
                                             <h5>Renumeration</h5>
                                             <div class="ibox-tools">
-                                                <span class="label label-warning-light pull-right">10 Messages</span>
                                             </div>
                                         </div>
                                         <div class="ibox-content">
