--- a/netishr/competency_dictionary_new.html
+++ b/netishr/competency_dictionary_new.html
@@ -122,8 +122,8 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="">Account</a></li>
-                                <li><a href="">Settings</a></li>
+                                <li><a href="account.html">Account</a></li>
+                                <li><a href="settings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -207,7 +207,7 @@
                             <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="competency_dictionary.html">Corporate Perspective/Objetives</a>
+                                        <a href="perspective.html">Corporate Perspective/Objetives</a>
                                     </li>
                                     <li>
                                         <a href="performance_kpi_view.html">Assign and view KPIs</a>
@@ -326,6 +326,9 @@
                                 </ul>
                             </li>
                         </ul>
+                    </li>
+                    <li>
+                        <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
                     </li>
 
 
@@ -570,36 +573,55 @@
 
                                                 <div class="hr-line-dashed"></div>
                                                 <div class="ibox-tools">
-                                                    
-                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">New indicator</button>
-                                                    <div class="modal inmodal" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
+
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newindicator">New indicator</button>
+                                                    <div class="modal fade" id="newindicator" aria-hidden="true">
                                                         <div class="modal-dialog">
-                                                            <div class="modal-content animated bounceInRight">
+                                                            <div class="modal-content">
+                                                                <!--
                                                                 <div class="modal-header">
                                                                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                                                                     <i class="fa fa-laptop modal-icon"></i>
                                                                     <h4 class="modal-title">New indicator</h4>
                                                                     <small class="font-bold">Please enter new indicator.</small>
                                                                 </div>
-                                                                <div class="modal-body">
-                                                                    <div class="form-group">
-                                                                        <label class="col-sm-2 control-label">Order: </label>
-                                                                        <div class="col-sm-10">
-                                                                            <input type="text" class="form-control">
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="form-group">
-                                                                        <label class="col-sm-2 control-label">Description: </label>
-                                                                        <div class="col-sm-10">
-                                                                            <input type="text" class="form-control">
-                                                                        </div>
-                                                                    </div>
+                                                                -->
 
+                                                                <div class="modal-body">
+                                                                    <div class="row">
+                                                                        <h3>New indicator</h3>
+
+                                                                        <p>Please enter new indicator.</p>
+
+                                                                        <form role="form">
+                                                                            <div class="form-group">
+                                                                                <label class="col-sm-2 control-label">Order: </label>
+                                                                                <div class="col-sm-10">
+                                                                                    <input type="text" class="form-control">
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="form-group">
+                                                                                <label class="col-sm-2 control-label">Description: </label>
+                                                                                <div class="col-sm-10">
+                                                                                    <input type="text" class="form-control">
+                                                                                </div>
+                                                                            </div>
+                                                                            <div>
+                                                                                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                                                            </div>
+                                                                        </form>
+
+                                                                    </div>
                                                                 </div>
+
+
+                                                                <!--
                                                                 <div class="modal-footer">
                                                                     <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
                                                                     <button type="button" class="btn btn-primary">Save changes</button>
                                                                 </div>
+                                                                -->
                                                             </div>
                                                         </div>
                                                     </div>
