--- a/netishr/index.html
+++ b/netishr/index.html
@@ -45,7 +45,7 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="">Account</a></li>
+                                <li><a href="account.html">Account</a></li>
                                 <li><a href="settings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
@@ -130,9 +130,7 @@
                             <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <<<<<<< HEAD <a href="performance_kpi_new.html">Corporate Perspective/Objetives</a>
-                                            =======
-                                            <a href="perspective.html">Corporate Perspective/Objetives</a> >>>>>>> 81c8f965c40e193318f8c2c2b33202f88d0f14df
+                                        <a href="perspective.html">Corporate Perspective/Objetives</a>
                                     </li>
                                     <li>
                                         <a href="performance_kpi_view.html">Assign and view KPIs</a>
