--- a/netishr/job_description.html
+++ b/netishr/job_description.html
@@ -1,4 +1,4 @@
-﻿<!--
+<!--
 *
 *  INSPINIA - Responsive Admin Theme
 *  version 2.6.2
@@ -47,8 +47,8 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="">Account</a></li>
-                                <li><a href="">Settings</a></li>
+                                <li><a href="account.html">Account</a></li>
+                                <li><a href="settings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -64,8 +64,7 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li>
-                                <a href="#">Level<span class="fa arrow"></span></a>
+                            <li><a href="#">Level<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="#">Branches</a>
@@ -75,8 +74,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">Structure<span class="fa arrow"></span></a>
+                            <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="job_levels.html">Job Levels/Sub-levels</a>
@@ -98,8 +96,7 @@
                     <li>
                         <a href="#"><i class="fa fa-bar-chart-o"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li>
-                                <a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
+                            <li><a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="competency_dictionary.html">Competency Dictionary</a>
@@ -115,10 +112,9 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label"/>Person</a>
+                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="persons.html">Persons</a></li>
-                            <li><a href="persons_profile.html">Profiles</a></li>
                         </ul>
                     </li>
                     <li>
@@ -133,19 +129,18 @@
                     <li>
                         <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li>
-                                <a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"/></span></a>
+                            <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="performance_kpi_new.html">Corporate Perspective/Objetives</a>
+                                        <a href="perspective.html">Corporate Perspective/Objetives</a>
                                     </li>
                                     <li>
                                         <a href="performance_kpi_view.html">Assign and view KPIs</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
+
+                            <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="#">Result Targets (KPI)</a>
@@ -157,8 +152,7 @@
                             </li>
                             <li><a href="#">Coaching</a></li>
                             <li><a href="#">Evidence</a></li>
-                            <li>
-                                <a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
+                            <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
@@ -258,7 +252,13 @@
                             </li>
                         </ul>
                     </li>
+                    <li>
+                        <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
+                    </li>
+
+
                 </ul>
+
             </div>
         </nav>
 
@@ -1372,7 +1372,8 @@
                                                     <div class="form-group netis_role">
                                                         <label class="control-label">
                                                             Role : Structural
-                                                        </label><br />
+                                                        </label>
+                                                        <br />
                                                         <label class="control-label">
                                                             Role Band :
                                                         </label>
@@ -1571,7 +1572,8 @@
                                                     <div class="form-group netis_role">
                                                         <label class="control-label">
                                                             Created Date : 21/10/2016
-                                                        </label><br />
+                                                        </label>
+                                                        <br />
                                                         <label class="control-label">
                                                             Revision : 3
                                                         </label>
@@ -2166,10 +2168,20 @@
                 responsive: true,
                 dom: '<"html5buttons"B>lTfgitp',
                 buttons: [
-                    { extend: 'copy' },
-                    { extend: 'csv' },
-                    { extend: 'excel', title: 'ExampleFile' },
-                    { extend: 'pdf', title: 'ExampleFile' },
+                    {
+                        extend: 'copy'
+                    },
+                    {
+                        extend: 'csv'
+                    },
+                    {
+                        extend: 'excel',
+                        title: 'ExampleFile'
+                    },
+                    {
+                        extend: 'pdf',
+                        title: 'ExampleFile'
+                    },
 
                     {
                         extend: 'print',
@@ -2178,8 +2190,8 @@
                             $(win.document.body).css('font-size', '10px');
 
                             $(win.document.body).find('table')
-                                    .addClass('compact')
-                                    .css('font-size', 'inherit');
+                                .addClass('compact')
+                                .css('font-size', 'inherit');
                         }
                     }
                 ]
@@ -2187,7 +2199,7 @@
             });
         });
 
-        $('#myModal').on('shown.bs.modal', function() {
+        $('#myModal').on('shown.bs.modal', function () {
             $('.datepicker').datepicker();
         });
 
