--- a/netishr/job_list.html
+++ b/netishr/job_list.html
@@ -42,8 +42,8 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="">Account</a></li>
-                                <li><a href="">Settings</a></li>
+                                <li><a href="account.html">Account</a></li>
+                                <li><a href="settings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -127,7 +127,7 @@
                             <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="competency_dictionary.html">Corporate Perspective/Objetives</a>
+                                        <a href="perspective.html">Corporate Perspective/Objetives</a>
                                     </li>
                                     <li>
                                         <a href="performance_kpi_view.html">Assign and view KPIs</a>
@@ -246,6 +246,9 @@
                                 </ul>
                             </li>
                         </ul>
+                    </li>
+                    <li>
+                        <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
                     </li>
 
 
