--- a/netishr/job_setting.html
+++ b/netishr/job_setting.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -29,8 +29,8 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="">Account</a></li>
-                                <li><a href="">Settings</a></li>
+                                <li><a href="account.html">Account</a></li>
+                                <li><a href="settings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -88,8 +88,8 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="Job/job_description.html">Job Description</a></li>
-                            <li><a href="graph_rickshaw.html">Workload Analysis</a></li>
+                            <li><a href="job_description.html">Job Description</a></li>
+                            <li><a href="#">Workload Analysis</a></li>
                             <li><a href="accountability_matrix.html">Accountability Matrix</a></li>
                         </ul>
                     </li>
@@ -97,16 +97,15 @@
                         <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="persons.html">Persons</a></li>
-                            <li><a href="persons_profile.html">Profiles</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span>  </a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="graph_flot.html">Manpower Planning</a></li>
-                            <li><a href="graph_morris.html">Recruitment Planning</a></li>
-                            <li><a href="graph_rickshaw.html">Applicants</a></li>
-                            <li><a href="graph_chartjs.html">Selection Process</a></li>
+                            <li><a href="#">Manpower Planning</a></li>
+                            <li><a href="#">Recruitment Planning</a></li>
+                            <li><a href="#">Applicants</a></li>
+                            <li><a href="#">Selection Process</a></li>
                         </ul>
                     </li>
                     <li>
@@ -115,7 +114,7 @@
                             <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="competency_dictionary.html">Corporate Perspective/Objetives</a>
+                                        <a href="perspective.html">Corporate Perspective/Objetives</a>
                                     </li>
                                     <li>
                                         <a href="performance_kpi_view.html">Assign and view KPIs</a>
@@ -155,22 +154,22 @@
                     <li>
                         <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Training</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="form_basic.html">Syllabus</a></li>
-                            <li><a href="form_advanced.html">Events</a></li>
-                            <li><a href="form_wizard.html">Individual Development Plan</a></li>
-                            <li><a href="form_file_upload.html">Training Plan</a></li>
-                            <li><a href="form_editors.html">Executed Training</a></li>
+                            <li><a href="#">Syllabus</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Individual Development Plan</a></li>
+                            <li><a href="#">Training Plan</a></li>
+                            <li><a href="#">Executed Training</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-desktop"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="contacts.html">Individual Career Plan</a></li>
-                            <li><a href="profile.html">Search Talent</a></li>
-                            <li><a href="profile_2.html">Talent Pool</a></li>
-                            <li><a href="contacts_2.html">Talent Development Program</a></li>
-                            <li><a href="projects.html">Talent Readiness</a></li>
-                            <li><a href="project_detail.html">Transfer</a></li>
+                            <li><a href="#">Individual Career Plan</a></li>
+                            <li><a href="#">Search Talent</a></li>
+                            <li><a href="#">Talent Pool</a></li>
+                            <li><a href="#">Talent Development Program</a></li>
+                            <li><a href="#">Talent Readiness</a></li>
+                            <li><a href="#">Transfer</a></li>
                         </ul>
                     </li>
                     <li>
@@ -234,6 +233,9 @@
                                 </ul>
                             </li>
                         </ul>
+                    </li>
+                    <li>
+                        <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
                     </li>
 
 
