--- a/netishr/performance_kpi_view.html
+++ b/netishr/performance_kpi_view.html
@@ -38,8 +38,8 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="">Account</a></li>
-                                <li><a href="">Settings</a></li>
+                                <li><a href="account.html">Account</a></li>
+                                <li><a href="settings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -123,7 +123,7 @@
                             <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="competency_dictionary.html">Corporate Perspective/Objetives</a>
+                                        <a href="perspective.html">Corporate Perspective/Objetives</a>
                                     </li>
                                     <li>
                                         <a href="performance_kpi_view.html">Assign and view KPIs</a>
@@ -242,6 +242,9 @@
                                 </ul>
                             </li>
                         </ul>
+                    </li>
+                    <li>
+                        <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
                     </li>
 
 
@@ -466,151 +469,151 @@
                         <div class="ibox">
                             <div class="ibox-content">
 
-<table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
-    <thead>
-        <tr>
-            <th data-toggle="true">Code</th>
-            <th data-toggle="true">Action Plan</th>
-            <th>KPI</th>
-            <th data-hide="phone,tablet">Target</th>
-            <th data-hide="phone,tablet">Definition</th>
-            <th data-hide="phone,tablet">Formula</th>
-            <th data-hide="phone">Status</th>
-            <th class="text-right" data-sort-ignore="true">
-                <div class="ibox-tools">
-                    <a href="performance_kpi_new.html" class="btn btn-primary btn-xs">New KPI</a>
-                </div>
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>
-                1.1.2.1
-            </td>
-            <td>
-                Sed imperdiet est in luctus efficitur.
-            </td>
-            <td>
-                Vestibulum
-            </td>
-            <td>
-                80
-            </td>
-            <td>
-                Proin eu dapibus sapien.
-            </td>
-            <td>
-                ABC
-            </td>
-            <td>
-                <span class="label label-primary">Enable</span>
-            </td>
-            <td class="text-right">
-                <div class="btn-group">
-                    <button class="btn-white btn btn-xs">View</button>
-                    <button class="btn-white btn btn-xs">Edit</button>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                1.1.2.2
-            </td>
-            <td>
-                Donec viverra commodo mauris sed suscipit.
-            </td>
-            <td>
-                Nunc fringilla.
-            </td>
-            <td>
-                120
-            </td>
-            <td>
-                Proin iaculis imperdiet ex a congue.
-            </td>
-            <td>
-                DEF
-            </td>
-            <td>
-                <span class="label label-primary">Enable</span>
-            </td>
-            <td class="text-right">
-                <div class="btn-group">
-                    <button class="btn-white btn btn-xs">View</button>
-                    <button class="btn-white btn btn-xs">Edit</button>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                1.1.2.3
-            </td>
-            <td>
-                Sociis natoque penatibus.
-            </td>
-            <td>
-                Nulla sollicitudin
-            </td>
-            <td>
-                100
-            </td>
-            <td>
-                Donec pretium elementum metus.
-            </td>
-            <td>
-                JKL
-            </td>
-            <td>
-                <span class="label label-danger">Disabled</span>
-            </td>
-            <td class="text-right">
-                <div class="btn-group">
-                    <button class="btn-white btn btn-xs">View</button>
-                    <button class="btn-white btn btn-xs">Edit</button>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                1.1.2.4
-            </td>
-            <td>
-                Donec viverra commodo.
-            </td>
-            <td>
-                Curabitur ac augue urna.
-            </td>
-            <td>
-                1000
-            </td>
-            <td>
-                Nulla facilisi.
-            </td>
-            <td>
-                MNO
-            </td>
-            <td>
-                <span class="label label-primary">Enable</span>
-            </td>
-            <td class="text-right">
-                <div class="btn-group">
-                    <button class="btn-white btn btn-xs">View</button>
-                    <button class="btn-white btn btn-xs">Edit</button>
-                </div>
-            </td>
-        </tr>
+                                <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
+                                    <thead>
+                                        <tr>
+                                            <th data-toggle="true">Code</th>
+                                            <th data-toggle="true">Action Plan</th>
+                                            <th>KPI</th>
+                                            <th data-hide="phone,tablet">Target</th>
+                                            <th data-hide="phone,tablet">Definition</th>
+                                            <th data-hide="phone,tablet">Formula</th>
+                                            <th data-hide="phone">Status</th>
+                                            <th class="text-right" data-sort-ignore="true">
+                                                <div class="ibox-tools">
+                                                    <a href="performance_kpi_new.html" class="btn btn-primary btn-xs">New KPI</a>
+                                                </div>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                1.1.2.1
+                                            </td>
+                                            <td>
+                                                Sed imperdiet est in luctus efficitur.
+                                            </td>
+                                            <td>
+                                                Vestibulum
+                                            </td>
+                                            <td>
+                                                80
+                                            </td>
+                                            <td>
+                                                Proin eu dapibus sapien.
+                                            </td>
+                                            <td>
+                                                ABC
+                                            </td>
+                                            <td>
+                                                <span class="label label-primary">Enable</span>
+                                            </td>
+                                            <td class="text-right">
+                                                <div class="btn-group">
+                                                    <button class="btn-white btn btn-xs">View</button>
+                                                    <button class="btn-white btn btn-xs">Edit</button>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                1.1.2.2
+                                            </td>
+                                            <td>
+                                                Donec viverra commodo mauris sed suscipit.
+                                            </td>
+                                            <td>
+                                                Nunc fringilla.
+                                            </td>
+                                            <td>
+                                                120
+                                            </td>
+                                            <td>
+                                                Proin iaculis imperdiet ex a congue.
+                                            </td>
+                                            <td>
+                                                DEF
+                                            </td>
+                                            <td>
+                                                <span class="label label-primary">Enable</span>
+                                            </td>
+                                            <td class="text-right">
+                                                <div class="btn-group">
+                                                    <button class="btn-white btn btn-xs">View</button>
+                                                    <button class="btn-white btn btn-xs">Edit</button>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                1.1.2.3
+                                            </td>
+                                            <td>
+                                                Sociis natoque penatibus.
+                                            </td>
+                                            <td>
+                                                Nulla sollicitudin
+                                            </td>
+                                            <td>
+                                                100
+                                            </td>
+                                            <td>
+                                                Donec pretium elementum metus.
+                                            </td>
+                                            <td>
+                                                JKL
+                                            </td>
+                                            <td>
+                                                <span class="label label-danger">Disabled</span>
+                                            </td>
+                                            <td class="text-right">
+                                                <div class="btn-group">
+                                                    <button class="btn-white btn btn-xs">View</button>
+                                                    <button class="btn-white btn btn-xs">Edit</button>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                1.1.2.4
+                                            </td>
+                                            <td>
+                                                Donec viverra commodo.
+                                            </td>
+                                            <td>
+                                                Curabitur ac augue urna.
+                                            </td>
+                                            <td>
+                                                1000
+                                            </td>
+                                            <td>
+                                                Nulla facilisi.
+                                            </td>
+                                            <td>
+                                                MNO
+                                            </td>
+                                            <td>
+                                                <span class="label label-primary">Enable</span>
+                                            </td>
+                                            <td class="text-right">
+                                                <div class="btn-group">
+                                                    <button class="btn-white btn btn-xs">View</button>
+                                                    <button class="btn-white btn btn-xs">Edit</button>
+                                                </div>
+                                            </td>
+                                        </tr>
 
 
-    </tbody>
-    <tfoot>
-        <tr>
-            <td colspan="6">
-                <ul class="pagination pull-right"></ul>
-            </td>
-        </tr>
-    </tfoot>
-</table>
+                                    </tbody>
+                                    <tfoot>
+                                        <tr>
+                                            <td colspan="6">
+                                                <ul class="pagination pull-right"></ul>
+                                            </td>
+                                        </tr>
+                                    </tfoot>
+                                </table>
                             </div>
                         </div>
                     </div>
