--- a/netishr/register.html
+++ b/netishr/register.html
@@ -22,10 +22,9 @@
         <div>
             <div>
 
-                <h1 class="logo-name">IN+</h1>
+                <h1 class="logo-name">NetisHR</h1></div>
 
-            </div>
-            <h3>Register to IN+</h3>
+            <h3>Register to NetisHR</h3>
             <p>Create account to see it in action.</p>
             <form class="m-t" role="form" action="login.html">
                 <div class="form-group">
@@ -38,14 +37,17 @@
                     <input type="password" class="form-control" placeholder="Password" required="">
                 </div>
                 <div class="form-group">
-                        <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Agree the terms and policy </label></div>
+                    <div class="checkbox i-checks">
+                        <label>
+                            <input type="checkbox"><i></i> Agree the terms and policy </label>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary block full-width m-b">Register</button>
 
                 <p class="text-muted text-center"><small>Already have an account?</small></p>
                 <a class="btn btn-sm btn-white btn-block" href="login.html">Login</a>
             </form>
-            <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
+            <p class="m-t"> <small>NetisHR version 2.xx.xxxxx &copy; 2016</small> </p>
         </div>
     </div>
 
@@ -55,7 +57,7 @@
     <!-- iCheck -->
     <script src="js/plugins/iCheck/icheck.min.js"></script>
     <script>
-        $(document).ready(function(){
+        $(document).ready(function () {
             $('.i-checks').iCheck({
                 checkboxClass: 'icheckbox_square-green',
                 radioClass: 'iradio_square-green',
